# cpp-dnd-character-generator

./: .gitignore  CMakeLists.txt  Makefile  character.cpp  character.hpp  compile_commands.json  dwarf.cpp  dwarf.hpp  main  main.cpp  randomfunctions.hpp  tables.hpp  tables.json
data/: tables.json
src/: attributes.cxx  attributes.hxx  character.cxx  character.hxx  dragonborn.cxx  dwarf.cxx  dwarf.hxx  elf.cxx  generateAppearance.cxx  generateAppearance.hxx  generateFunctions.cxx  generateFunctions.hxx  gnome.cxx  gnome.hxx  halfelf.cxx  halfelf.hxx  halfling.cxx  halfling.hxx  halforc.cxx  halforc.hxx  highelf.cxx  highelf.hxx  hilldwarf.cxx  hilldwarf.hxx  human.cxx  human.hxx  json.hpp  lightfoothalfling.cxx  lightfoothalfling.hxx  main.cxx  proficiencies.cxx  proficiencies.hxx  race.cxx  race.hxx  rockgnome.cxx  rockgnome.hxx  tiefling.cxx
src/classes/: barbarian.cxx  barbarian.hxx  class.cxx  class.hxx
src/races/: dragonborn.cxx  dragonborn.hxx  dwarf.cxx  dwarf.hxx  elf.cxx  elf.hxx  gnome.cxx  gnome.hxx  halfelf.cxx  halfelf.hxx  halfling.cxx  halfling.hxx  halforc.cxx  halforc.hxx  highelf.cxx  highelf.hxx  hilldwarf.cxx  hilldwarf.hxx  human.cxx  human.hxx  lightfoothalfling.cxx  lightfoothalfling.hxx  race.cxx  race.hxx  rockgnome.cxx  rockgnome.hxx  tiefling.cxx  tiefling.hxx
